# sbom-license-scanner

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
license/fedora/: Cargo.toml
license/fedora/data/: fedora-licenses.json
license/fedora/src/: lib.rs  license.rs
license/fedora/src/api/: mod.rs
license/fedora/src/entity/: fedora_license.rs  mod.rs
license/fedora/src/fetcher/: license_fetcher.rs  mod.rs
license/spdx/: Cargo.toml
license/spdx/src/: lib.rs  license.rs
license/spdx/src/api/: mod.rs
license/spdx/src/entity/: mod.rs  spdx_license.rs
license/spdx/src/fetcher/: license_content_fetcher.rs  license_fetcher.rs  mod.rs
main/: Cargo.toml
main/src/: main.rs
sbom/: Cargo.toml
sbom/src/: lib.rs
sbom/src/model/: mod.rs  sbom_license.rs
sbom/src/scanner/: mod.rs  sbom_scanner.rs
