#[package]
#name = "sbom-license-scanner"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "license",
    "license/fedora",
    "license/spdx",
    "sbom", "common", "main",
]

[workspace.dependencies]
walker-common= "0.9.3"
cyclonedx-bom = { version = "0.7.0"}
spdx-rs = { version = "0.5.4" }
sea-orm = "~1.0" # See https://www.sea-ql.org/blog/2024-08-04-sea-orm-1.0/#release-planning
sbom-walker = { version = "0.9.3", features = ["cyclonedx-bom","spdx-rs"] }
thiserror = "1.0.65"
async-trait = "0.1"
url = "2.5.2"
tokio= { version = "1.41.0", features = ["full"] }
serde_json= "0.9.10"
serde = { version = "1.0.2", features = ["derive"] }
