[package]
name = "sbom-license-scanner-fedora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
walker-common = { workspace = true }
async-trait = { workspace = true }
url =  { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
serde_json = "1.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
spdx-expression = "0.5.1"
anyhow = "1.0.91"